[package]
name = "vaporz"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = "0.29.0"
crossterm = { version = "0.29.0", features = ["event-stream"] }
walkdir = "2.5.0"
tokio = { version = "1.47.1", features = ["full"] }
futures = "0.3.31"
tokio-util = "0.7.16"
color-eyre = "0.6.5"
signal-hook = "0.3.18"
log = "0.4.27"
simplelog = "0.12.2"
rayon = "1.11.0"
thiserror = "2.0.16"
uuid = { version = "1.18.0", features = ["v4"] }
